--- a/burger-stcker/src/App.css
+++ b/burger-stcker/src/App.css
@@ -1,38 +1,28 @@
-.App {
+* {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  margin: 15px
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.panes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.pane {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: space-between;
+  margin: 1em .3em;
+  padding: 0 2em;
+  width: 45%;
+  border: 2px solid black;
+  border-radius: 10px;
 }
